fixed grid jumping issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,7 @@
 body {
   text-align: center;
-  font-size: 1em;
   font-family: Verdana, sans-serif;
   margin: 0;
-  box-sizing: border-box;
 }
 
 .App {
