--- a/src/components/Instructions/Instructions.scss
+++ b/src/components/Instructions/Instructions.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
 
   display: flex;
   justify-content: center;
@@ -13,7 +14,7 @@
 
   &__wrapper {
     width: 500px;
-    padding: 16px 16px 0;
+    padding: 16px;
     border-radius: 8px;
     border: 1px solid #1a1a1b;
     background-color: #fff;
